--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet"style.css"/>
+    <img src="pis.jpg" />
 <title> My Awesome Life</title>
 </head>
 <body>
