--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet"style.css"/>
-    <img src="pis.jpg" />
 <title> My Awesome Life</title>
 </head>
 <body>
  <h1>This is the house of Nicodemus on the internet. Welcome!</h1>
- <img src="https://dhis.dhs.sg/data/photos/32123F16-E447-489E-9CF/';0-96BA161F670F.jpg />
+ <img src="pis.jpg />
  <h2>About Me</h2>
  <p> Hi! I am Nicodemus Tan, a thirteen year old from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore.</p>
  <h2> Interest</h2>
