--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
  <h2> Interest</h2>
  <p> My interest is chess and gaming. Chess is a strategic ganme that allows me to think while having fun. However, gaming is just a stress reliver that i do when i am too stressed.<a href="https://en.wikipedia.org/wiki/Chess">Chess</a>
  <h2>Projects</h2>
- <p> I am doing a computing project with github</p>
+ <p> I am doing <a href="http://codein.withgoogle.com">Google Code-in 2016</a> with <a href="http:fossasia.org">FOSSASIA</a>!</p>
  </body>
  
