--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE.html>
 <html>
   <head>
-    <link rel="stylesheet"style.css"/>
+    <link rel="stylesheet" href="style.css"/>
 <title> My Awesome Life</title>
 </head>
 <body>
