--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE.html>
 <html>
+  
+  <link rel="stylesheet" href="style.css"/>
   <head>
-    <link rel="stylesheet" href="style.css"/>
+    
 <title> My Awesome Life</title>
 </head>
 <body>
@@ -14,4 +16,4 @@
  <h2>Projects</h2>
  <p> I am doing <a href="http://codein.withgoogle.com">Google Code-in 2016</a> with <a href="http:fossasia.org">FOSSASIA</a>!</p>
  </body>
- 
+</html> 
