--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE.html>
 <html>
-  
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="page1.html">
+  <link rel="stylesheet" href="style.css">
   <head>
     
 <title> My Awesome Life</title>
