--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE.html>
 <html>
-  <link rel="stylesheet" href="page1.html">
   <link rel="stylesheet" href="style.css">
   <head>
     
@@ -15,5 +14,7 @@
  <p> My interest is chess and gaming. Chess is a strategic ganme that allows me to think while having fun. However, gaming is just a stress reliver that i do when i am too stressed.<a href="https://en.wikipedia.org/wiki/Chess">Chess</a>
  <h2>Projects</h2>
  <p> I am doing <a href="http://codein.withgoogle.com">Google Code-in 2016</a> with <a href="http:fossasia.org">FOSSASIA</a>!</p>
+  
+  <a href="page1.html">My reaction paper</a>
  </body>
 </html> 
