--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
  <h2>Projects</h2>
  <p> I am doing <a href="http://codein.withgoogle.com">Google Code-in 2016</a> with <a href="http:fossasia.org">FOSSASIA</a>!</p>
   
-  <a href="page1.html">My reaction paper</a>
+  <a href="page1.html">My movie review</a>
  </body>
 </html> 
