--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
- <img src="pic_mountain.jpg" alt="Movie Cover" style="width:304px;height:228px;">
+ <img src="MV5BMjMxOTM1OTI4MV5BMl5BanBnXkFtZTgwODE5OTYxMDI@._V1_UX182_CR0,0,182,268_AL_.jpg" alt="Movie Cover" style="width:304px;height:228px;">
 <h1>Movie Review</h1>
 <p>
 Based on J.K Rowling’s  original story, it takes place in 1920s New York City and follows Newt Scamander, a magizoologist and author of a Hogwarts Textbook that catalogs magical creatures. As per usual in the Potter saga, you can expect plenty of fantasy violence, some of which ends in deaths (a couple are pretty gruesome). There's also mass destruction, although the property destroyed is magically fixed, and the minds of the No-Maj ("no magic") folks are always erased. Wizards engage in wand battles, two wizards are sentenced to death and nearly killed, and an out-of-control form of magic nearly destroys whole swaths of Manhattan. A character's mother beats him with a belt. Unlike the original Harry Potter movies, the main characters here are all adults, and the story is much more of a grown-up suspense/thriller than a kid-centric adventure. But themes and messages include curiosity, compassion, and courage, and the main characters are all strong role models.</p>
