--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE.html>
 <html>
-  <link rel="stylesheet" href="style.cs">
+  <link rel="stylesheet" href="style.css">
   <head>
     
 <title> My Awesome Life</title>
