--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE.html>
 <html>
-  <link rel="stylesheet" href="style.css">
   <head>
-    
+    <style>
+body {
+    background-color: orange;
+}
+ body {
+    color: blue;
+}
+h1 {
+    color: green;
+}
+    </style>
 <title> My Awesome Life</title>
 </head>
 <body>
