--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <style>
 body {
-    background-color: red;
+    background-color: lightblue;
 }
  body {
     color: black;
 }
 h1 {
-    color: white;
+    color: orange;
 }
     </style>
 <title> My Awesome Life</title>
